# wertigo-frontend

Client/: home.html  index.html  tracker.html  vercel.json
Client/css/: auth.css  custom-chat.css  style.css  tracker.css  trip-planner.css
Client/js/: activity-manager.js  animation-manager.js  chat-manager.js  config.js  destination-manager.js  main.js  map-manager.js  planner-manager.js  tracker.js  trip-itinerary.js  trip-planner.js  ui-manager.js
utils/: __init__.py  app.py  app_backup.py  auth_routes.py  create_tables.py  database.py  db_config.py  db_schema_check.py  email_service.py  knowledge_cache.py  model_handler.py  model_utils.py  nltk_fix.py  pyproject.toml  recommender.py  revised.py  revised_backup.py  routing_service.py  run_server.py  server.py  setup_tickets_table.py  ticket_service.py  train_revised_model.py  trip_service.py  try.py
